Ajuste do cadastro de alunos
